miniconf/tests/ui/internal_no_leaf.stderr
error: Internal nodes must have at least one leaf
 --> tests/ui/internal_no_leaf.rs:4:10
  |
4 | pub enum EnumUninhab {}
  |          ^^^^^^^^^^^

error: Internal nodes must have at least one leaf
 --> tests/ui/internal_no_leaf.rs:7:10
  |
7 | pub enum EnumEmpty {#[tree(skip)] V}
  |          ^^^^^^^^^

error: Unsupported shape `no fields`. Expected named fields or unnamed fields.
 --> tests/ui/internal_no_leaf.rs:9:10
  |
9 | #[derive(Tree)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Tree` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Internal nodes must have at least one leaf
  --> tests/ui/internal_no_leaf.rs:13:12
   |
13 | pub struct StructUnitTuple ();
   |            ^^^^^^^^^^^^^^^

error: Internal nodes must have at least one leaf
  --> tests/ui/internal_no_leaf.rs:16:12
   |
16 | pub struct StructEmptyTuple (#[tree(skip)] ());
   |            ^^^^^^^^^^^^^^^^

error: Internal nodes must have at least one leaf
  --> tests/ui/internal_no_leaf.rs:19:12
   |
19 | pub struct StructEmpty {#[tree(skip)] _f: ()}
   |            ^^^^^^^^^^^
